--- a/index.html
+++ b/index.html
@@ -5,130 +5,97 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Our First Valentine ❤️</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500;600&family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600&family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
 
 <style>
 
 body{
   margin:0;
   font-family:'Montserrat', sans-serif;
-  background: linear-gradient(135deg, #2b1e22, #3e272e, #5a343c);
-  color:#f8e6ec;
+  background: linear-gradient(135deg, #2b1055, #7597de);
+  color:white;
+  overflow-x:hidden;
 }
 
-/* Rose gold glow overlay */
+/* Soft glowing overlay */
 body::before{
   content:"";
   position:fixed;
-  top:0;
-  left:0;
   width:100%;
   height:100%;
-  background: radial-gradient(circle at 30% 20%, rgba(255,182,193,0.15), transparent 40%),
-              radial-gradient(circle at 70% 80%, rgba(255,215,180,0.12), transparent 40%);
+  background: radial-gradient(circle at top left, rgba(255,192,203,0.25), transparent 40%),
+              radial-gradient(circle at bottom right, rgba(255,215,180,0.25), transparent 40%);
   z-index:-1;
 }
 
-/* Full width section */
 section{
-  width:100%;
-  padding:60px 6%;
-  box-sizing:border-box;
+  padding:40px 20px;
   text-align:center;
 }
 
-/* Title */
 h1{
-  font-family:'Cormorant Garamond', serif;
-  font-size:1.5em;
-  letter-spacing:1px;
-  color:#f7c4cf;
-  margin-bottom:50px;
+  font-family:'Playfair Display', serif;
+  font-size:1.6rem;
+  margin-bottom:30px;
+  color:#ffd6ec;
 }
 
-/* Image container */
+/* FORCE side by side even on mobile */
 .image-row{
   display:flex;
   justify-content:center;
-  align-items:center;
-  gap:40px;
-  max-width:1100px;
-  margin:0 auto;
+  gap:10px;
+  flex-wrap:nowrap;   /* Important */
 }
 
-/* Equal size images */
 .image-row img{
-  width:450px;
-  height:550px;
+  width:48%;
+  height:250px;
   object-fit:cover;
-  border-radius:20px;
-  box-shadow:0 25px 60px rgba(0,0,0,0.6);
-  border:2px solid rgba(255,192,203,0.4);
-  transition:0.4s ease;
+  border-radius:15px;
+  box-shadow:0 15px 30px rgba(0,0,0,0.4);
+  border:2px solid rgba(255,255,255,0.3);
 }
 
-.image-row img:hover{
-  transform:scale(1.04);
-  box-shadow:0 30px 70px rgba(255,182,193,0.5);
-}
-
-/* Content */
 .love-content{
-  margin-top:80px;
-  max-width:900px;
-  margin-left:auto;
-  margin-right:auto;
-}
-
-.love-content p{
-  font-size:1rem;
-  line-height:1.9;
-  margin:20px 0;
-  color:#f3d7df;
-}
-
-h2{
-  font-family:'Cormorant Garamond', serif;
-  font-size:1.5rem;
-  color:#f7b7c3;
   margin-top:40px;
 }
 
-/* Rose gold buttons */
+.love-content p{
+  font-size:0.95rem;
+  line-height:1.8;
+  margin:15px 0;
+  color:#ffeaf6;
+}
+
+h2{
+  font-family:'Playfair Display', serif;
+  font-size:1.3rem;
+  margin-top:30px;
+  color:#ffd6ec;
+}
+
 button{
-  padding:12px 26px;
-  margin:12px;
+  padding:10px 22px;
+  margin:10px;
   border:none;
-  border-radius:30px;
-  font-size:0.9rem;
+  border-radius:25px;
+  font-size:0.85rem;
   cursor:pointer;
-  background: linear-gradient(45deg, #b76e79, #e6a4b4, #f7c6d4);
-  color:#3a1c23;
+  background:linear-gradient(45deg,#ff6fa5,#ffc1e3);
+  color:#4a0033;
   font-weight:500;
   transition:0.3s ease;
 }
 
 button:hover{
   transform:scale(1.08);
-  box-shadow:0 0 25px rgba(255,182,193,0.6);
 }
 
 #message{
-  margin-top:20px;
-  font-size:1rem;
-  color:#f7c4cf;
-}
-
-/* Responsive */
-@media(max-width:1000px){
-  .image-row{
-    flex-direction:column;
-  }
-
-  .image-row img{
-    width:90%;
-    height:auto;
-  }
+  margin-top:15px;
+  font-size:0.95rem;
+  color:#ffd6ec;
 }
 
 </style>
@@ -148,29 +115,27 @@ button:hover{
 
   <p>
     From childhood memories… to becoming husband & wife…  
-    our story feels like destiny wrapped in love.
+    our love feels written by destiny.
   </p>
 
   <p>
-    We grew up as <b>bava & maradalu</b>…  
-    and life beautifully turned that bond into forever.
+    We grew up as bava & maradalu…  
+    and life turned that bond into forever.
   </p>
 
   <p>
-    We fight. We misunderstand. We argue sometimes.  
-    But at the end of everything…
+    Even after fights and misunderstandings…
   </p>
 
-  <p><b>I still choose you.</b></p>
+  <p><b>I still choose you. Every single day.</b></p>
 
   <p>
-    You are my comfort. My peace.  
-    My forever person.
+    You are my comfort. My peace. My forever.
   </p>
 
   <h2>❤️ I Love You ❤️</h2>
 
-  <h2>Do You Love Me? 😌</h2>
+  <h2>Do You Love Me? 😘</h2>
 
   <button onclick="showLove()">Yes ❤️</button>
   <button id="noBtn" onmouseover="moveButton()">No 😜</button>
@@ -183,25 +148,26 @@ button:hover{
 
 </section>
 
-<!-- Soft romantic background music -->
-<audio id="bgAudio" loop>
-  <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-3.mp3" type="audio/mpeg">
-</audio>
+<!-- Soft romantic instrumental (free demo track) -->
 
+<audio id="bgAudio" loop>
+  <source src="Love.mp3" type="audio/mpeg">
+</audio>
 <script>
 
 const audio = document.getElementById("bgAudio");
-let started=false;
+let started = false;
 
-audio.volume=0.25;
+audio.volume = 0.2;
 
-audio.play().catch(()=>{});
-
-window.addEventListener("scroll",()=>{
+function startMusic(){
   if(!started){
-    audio.play().then(()=>started=true).catch(()=>{});
+    audio.play().then(()=> started=true).catch(()=>{});
   }
-});
+}
+
+window.addEventListener("touchstart", startMusic);
+window.addEventListener("scroll", startMusic);
 
 function showLove(){
   document.getElementById("message").style.display="block";
