--- a/index.html
+++ b/index.html
@@ -4,27 +4,46 @@
 <meta charset="UTF-8">
 <title>Our First Valentine ❤️</title>
 
-<!-- Google Elegant Font -->
-<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Poppins:wght@300;400&display=swap" rel="stylesheet">
 
 <style>
 
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Cormorant Garamond', serif;
-  background: linear-gradient(135deg, #1a1a1a, #2c1b18, #3a2a25);
-  color: #f5e6dc;
+  min-height: 100vh;
+  font-family: 'Poppins', sans-serif;
   text-align: center;
+  color: #5a3e36;
+
+  background: linear-gradient(-45deg, #fff0f5, #ffe4e1, #fce1e4, #f8edeb);
+  background-size: 400% 400%;
+  animation: gradientMove 18s ease infinite;
+}
+
+@keyframes gradientMove {
+  0% {background-position: 0% 50%;}
+  50% {background-position: 100% 50%;}
+  100% {background-position: 0% 50%;}
+}
+
+/* Soft glow overlay */
+body::before {
+  content: "";
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(circle at top right, rgba(255,192,203,0.3), transparent 60%);
+  z-index: -1;
 }
 
 /* Title */
 h1 {
-  font-size: 1.9rem;
-  margin-top: 40px;
+  font-family: 'Playfair Display', serif;
+  font-size: 1.7rem;
+  margin-top: 35px;
+  color: #b76e79;
   letter-spacing: 1px;
-  font-weight: 600;
-  color: #f7c8a5;
 }
 
 /* Image Section */
@@ -33,35 +52,49 @@ h1 {
   justify-content: center;
   gap: 25px;
   flex-wrap: wrap;
-  margin: 40px 20px;
+  margin: 35px 15px;
 }
 
 .image-wrapper img {
   width: 45%;
-  max-width: 350px;
+  max-width: 340px;
   height: 420px;
-  object-fit: contain; /* prevents cropping */
-  background: #000;
+  object-fit: contain;
+  background: white;
   border-radius: 20px;
-  padding: 8px;
-  box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+  padding: 6px;
+  box-shadow: 0 15px 35px rgba(183,110,121,0.25);
+  transition: transform 0.4s ease;
 }
 
-/* Cute Paragraph Boxes */
+.image-wrapper img:hover {
+  transform: scale(1.03);
+}
+
+/* Romantic paragraph cards */
 .love-box {
-  background: rgba(255, 255, 255, 0.06);
-  border: 1px solid rgba(247, 200, 165, 0.4);
-  padding: 18px;
-  border-radius: 15px;
+  background: rgba(255,255,255,0.6);
   margin: 18px auto;
+  padding: 22px;
   max-width: 650px;
+  border-radius: 25px;
   backdrop-filter: blur(10px);
+  box-shadow: 0 10px 30px rgba(183,110,121,0.15);
   font-size: 1.05rem;
-  line-height: 1.6;
-  box-shadow: 0 5px 20px rgba(0,0,0,0.3);
+  line-height: 1.7;
+  position: relative;
 }
 
-/* Love Question Section */
+.love-box::after {
+  content: "❤️";
+  position: absolute;
+  bottom: -12px;
+  right: 20px;
+  font-size: 18px;
+  opacity: 0.4;
+}
+
+/* Buttons */
 .buttons {
   margin-top: 30px;
 }
@@ -77,12 +110,12 @@ button {
 }
 
 #yesBtn {
-  background: #b76e79; /* rose gold */
+  background: linear-gradient(45deg, #ff9a9e, #fad0c4);
   color: white;
 }
 
 #noBtn {
-  background: #444;
+  background: #6d6875;
   color: white;
   position: relative;
 }
@@ -91,7 +124,8 @@ button {
   display: none;
   margin-top: 20px;
   font-size: 1.1rem;
-  color: #f7c8a5;
+  color: #b76e79;
+  font-weight: 500;
 }
 
 </style>
@@ -101,16 +135,13 @@ button {
 
 <h1>Happy First Valentine My Love ❤️</h1>
 
-<!-- Images Side by Side -->
 <div class="image-wrapper">
   <img src="IMG_3043.jpeg" alt="Childhood Memory">
   <img src="IMG_6203.jpeg" alt="Our Love">
 </div>
 
-<!-- Paragraph Boxes -->
 <div class="love-box">
-From childhood memories… 👶  
-to becoming husband & wife… 💍  
+From childhood memories… 👶 to becoming husband & wife… 💍  
 Our story was written by destiny.
 </div>
 
@@ -127,8 +158,7 @@ and destiny decided,
 </div>
 
 <div class="love-box">
-Yes, we fight.  
-Yes, we get angry.  
+Yes, we fight. Yes, we get angry.  
 Yes, we hurt each other sometimes.
 </div>
 
@@ -138,16 +168,10 @@ But even after all that,
 </div>
 
 <div class="love-box">
-You are my comfort,  
-my safe place,  
-my forever person.
-</div>
-
-<div class="love-box">
+You are my comfort, my safe place, my forever person.  
 ❤️ I LOVE YOU ❤️
 </div>
 
-<!-- Love Question -->
 <div class="buttons">
   <h2>Do You Love Me? 😘</h2>
   <button id="yesBtn" onclick="showLove()">Yes ❤️</button>
@@ -156,7 +180,7 @@ my forever person.
 
 <p id="message">Forever yours… My Bava 💖🌙</p>
 
-<!-- Background Music -->
+<!-- Soft Romantic Music -->
 <audio id="bgAudio" loop>
   <source src="Love.mp3" type="audio/mpeg">
 </audio>
