--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@ body {
   text-align: center;
   color: #5a3e36;
 
-  background: linear-gradient(-45deg, #fff0f5, #ffe4e1, #fce1e4, #f8edeb);
-  background-size: 400% 400%;
-  animation: gradientMove 18s ease infinite;
+  /* Romantic pastel gradient sky */
+  background: linear-gradient(to bottom, #ffe6f0, #ffd9e8, #fff0f5);
+  overflow-x: hidden;
+  position: relative;
 }
 
-@keyframes gradientMove {
-  0% {background-position: 0% 50%;}
-  50% {background-position: 100% 50%;}
-  100% {background-position: 0% 50%;}
+/* Floating soft hearts in background */
+.heart {
+  position: absolute;
+  font-size: 18px;
+  opacity: 0.6;
+  animation: floatUp linear infinite;
+  color: #ffb6c1;
 }
 
-/* Soft glow overlay */
-body::before {
-  content: "";
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  background: radial-gradient(circle at top right, rgba(255,192,203,0.3), transparent 60%);
-  z-index: -1;
+@keyframes floatUp {
+  0% { transform: translateY(100vh) scale(0.5); opacity: 0.4; }
+  50% { opacity: 0.7; }
+  100% { transform: translateY(-10vh) scale(1); opacity: 0; }
 }
 
 /* Title */
@@ -73,7 +73,7 @@ h1 {
 
 /* Romantic paragraph cards */
 .love-box {
-  background: rgba(255,255,255,0.6);
+  background: rgba(255,255,255,0.65);
   margin: 18px auto;
   padding: 22px;
   max-width: 650px;
@@ -186,29 +186,43 @@ You are my comfort, my safe place, my forever person.
 </audio>
 
 <script>
+// Music
 const audio = document.getElementById("bgAudio");
 let started = false;
 audio.volume = 0.25;
-
 function startMusic(){
   if(!started){
-    audio.play().then(()=> started = true).catch(()=>{});
+    audio.play().then(()=> started=true).catch(()=>{});
   }
 }
-
 window.addEventListener("touchstart", startMusic);
 window.addEventListener("scroll", startMusic);
 
+// Love button
 function showLove() {
   document.getElementById("message").style.display = "block";
 }
 
+// No button movement
 function moveButton() {
   var btn = document.getElementById("noBtn");
   btn.style.position = "absolute";
   btn.style.top = Math.random() * 80 + "%";
   btn.style.left = Math.random() * 80 + "%";
 }
+
+// Floating hearts in background
+function createHeart(){
+  const heart = document.createElement("div");
+  heart.className = "heart";
+  heart.innerText = "❤️";
+  heart.style.left = Math.random() * 100 + "vw";
+  heart.style.fontSize = (Math.random() * 20 + 10) + "px";
+  document.body.appendChild(heart);
+  setTimeout(()=> heart.remove(), 8000);
+}
+setInterval(createHeart, 500);
+
 </script>
 
 </body>
